# Pygame-BitmapFont

./: .gitignore  README.md  charset_id1.jsonx  demo.py  pyproject.toml  requirements.txt  setup.py
bitmap_font/: __init__.py  bitmap_font_fixed_height.py  bitmap_font_free_dims.py  utils.py
bitmapfont/: __init__.py  extractor.py
examples/: demo.py
examples/fonts/: good_neighbours_font_credits.txt  simple.json  url.txt
examples/fonts/charsets/: url.txt
fonts/: charset-id3v2.json  charset-kalma-quake-shadow.json  charset-kalma-quake.json  charset_id1.json  good_neighbours_font.json  red_gradient_capital_font.json  small_font.json
pgbitmapfont/: __init__.py  bitmapfont_fixed_height.py  bitmapfont_free_dims.py  extractor.py
pygame-bitmapfont/: bitmap_font_fixed_height.py  bitmap_font_free_dims.py
tests/: test_bitmapfont.py  test_bitmapfont_fixed_height.py  test_bitmapfont_free_dims.py
tests/fonts/fixed_height/: corrupted_json_font.json  empty_char_order_font.json  incorrect_char_order_font.json  incorrect_colorkey_font.json  miss_char_order_font.json  miss_color_font.json  miss_colorkey_font.json  miss_image_font.json  miss_sepcolor_font.json
tests/fonts/free_dims/: correct_font.json  corrupted_json_font.json  empty_chars_font.json  font_credits.txt  incorrect_chars_font.json  miss_chars_font.json  miss_colorkey_font.json  miss_image_font.json
tools/: detect_colorkey.py  extractor.py
