[project]
name = "pgbitmapfont"
version = "0.1.1"
description = "A Python library to render text from bitmap font images"
authors = [
    { name = "xdoko01" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "pygame>=2.0.0",
    "pathlib"
]

[project.scripts]
bitmapfont-extract = "bitmapfont.extractor:main"

[project.urls]
Homepage = "https://github.com/xdoko01/Pygame-BitmapFont"
Issues = "https://github.com/xdoko01/Pygame-BitmapFont/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
